# aether

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TODO.md
cmake/: version.h.in
examples/: CMakeLists.txt  example.c  timer.c
include/aether/: aether.h
scripts/: release.ps1
tests/: CMakeLists.txt  test_arenas.c  test_files.c  test_ring.c  test_ring_spsc.c  test_strings.c  verify_c11.c  verify_cxx11.cpp
